--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
     "async": "^1.5.0",
     "underscore": "^1.8.3",
     "node-sass": "^3.3.2",
-    "node-sass-middleware": "^0.9.7", 
+    "node-sass-middleware": "^0.9.7",
     "dotenv": "^1.1.0"
   },
   "devDependencies": {
+    "async": "^1.5.2",
     "grunt": "^0.4.4",
-    "grunt-express-server": "^0.4.17",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-jshint": "^0.7.1",
-    "jshint-stylish": "^2.0.1",
-    "load-grunt-tasks": "^0.4.0",
-    "load-grunt-configs": "^0.4.1",
-    "grunt-node-inspector": "^0.1.5",
-    "time-grunt": "^0.3.1",
     "grunt-concurrent": "^0.5.0",
-    "grunt-nodemon": "^0.2.1", 
-    "grunt-sass": "^1.0.0", 
-    "open": "0.0.5"
+    "grunt-contrib-jshint": "^0.7.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.4.17",
+    "grunt-node-inspector": "^0.1.5",
+    "grunt-nodemon": "^0.2.1",
+    "grunt-sass": "^1.0.0",
+    "jshint-stylish": "^2.0.1",
+    "load-grunt-configs": "^0.4.1",
+    "load-grunt-tasks": "^0.4.0",
+    "open": "0.0.5",
+    "request": "^2.67.0",
+    "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.10.22",
