--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "sflultimate",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "engines": {
+    "node": "0.12.9",
+    "npm": "2.14.9"
+  },
   "dependencies": {
     "keystone": "^0.3.16",
     "async": "^1.5.0",
@@ -26,12 +29,9 @@
     "request": "^2.67.0",
     "time-grunt": "^0.3.1"
   },
-  "engines": {
-    "node": ">=0.10.22",
-    "npm": ">=1.3.14"
-  },
   "scripts": {
     "start": "node keystone.js"
   },
-  "main": "keystone.js"
+  "main": "keystone.js",
+  "private": true
 }
