--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^1.1.0"
   },
   "devDependencies": {
+    "braintree": "^1.35.0",
     "grunt": "^0.4.4",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-jshint": "^0.7.1",
