--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,6 @@
   "camelcase": false,
   "curly": false,  /* custom */
   "eqeqeq": true,
-  "es3": false,
   "forin": true,
   "freeze": true,
   "immed": true,
@@ -29,7 +28,7 @@
   "boss": true,  /* custom */
   "debug": false,
   "eqnull": true,  /* custom */
-  "esnext": false,
+  "esversion": 6,
   "evil": false,
   "expr": false,
   "funcscope": false,
