--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^6.1.0",
     "jade": "^1.11.0",
     "keystone": "^4.0.0",
+    "node-sass": "^4.10.0",
+    "sass-mediaqueries": "^1.6.1",
     "superagent": "^4.0.0"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "grunt-contrib-jshint": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-nodemon": "^0.4.2",
+    "grunt-sass": "^3.0.2",
     "grunt-shell": "^2.1.0",
     "jshint-stylish": "^2.2.1",
     "load-grunt-configs": "^1.0.0",
@@ -29,8 +32,7 @@
     "time-grunt": "^2.0.0"
   },
   "scripts": {
-    "start": "node keystone.js",
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "start": "node keystone.js"
   },
   "main": "keystone.js",
   "private": true
