Adding first version of registration page

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ scripts/*.csv
 bower_components
 
 *.map
+
+# Jetbrains editor
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
