--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "braintree": "^2.13.1",
     "browserify": "^16.2.3",
     "dotenv": "^6.1.0",
+    "eslint": "^6.8.0",
     "jade": "^1.11.0",
     "keystone": "^4.0.0",
     "node-sass": "^4.10.0",
@@ -19,6 +20,11 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "grunt": "^1.0.3",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-jshint": "^2.0.0",
