--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "browserify": "^16.2.3",
     "dotenv": "^6.1.0",
     "eslint": "^6.8.0",
+    "express-recaptcha": "^5.0.1",
     "jade": "^1.11.0",
     "keystone": "^4.2.1",
     "node-sass": "^4.13.1",
+    "request": "^2.88.0",
     "sass-mediaqueries": "^1.6.1",
     "superagent": "^4.0.0",
     "underscore": "^1.9.1"
