--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cypress": "^8.4.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
