--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-recaptcha": "^5.0.1",
     "jade": "^1.11.0",
     "keystone": "^4.2.1",
+    "mailchimp-api-v3": "^1.15.0",
     "node-sass": "^4.13.1",
     "node-sass-middleware": "^0.11.0",
     "request": "^2.88.0",
