--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-mocha": "^10.0.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^4.0.1",
