--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,6 @@ trim_trailing_whitespace = false
 insert_final_newline = true
 indent_style = space
 
-[{*.yml,*.json}]
+[{*.yml,*.json, *.jade}]
 indent_style = space
 indent_size = 2
