--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mailchimp-api-v3": "^1.15.0",
     "node-sass": "^4.13.1",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^6.9.1",
     "request": "^2.88.0",
     "sass-mediaqueries": "^1.6.1",
     "superagent": "^4.0.0",
