--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "^1.11.0",
     "keystone": "^4.2.1",
     "mailchimp-api-v3": "^1.15.0",
+    "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "node-sass": "^4.13.1",
     "node-sass-middleware": "^0.11.0",
