--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sflultimate",
   "version": "3.0.0",
   "engines": {
-    "node": "14.17.3",
-    "npm": "7.24.0"
+    "node": "v14.17.3",
+    "npm": "9.2.0"
   },
   "dependencies": {
     "async": "^2.6.1",
@@ -14,6 +14,7 @@
     "express-recaptcha": "^5.0.1",
     "jade": "^1.11.0",
     "keystone": "^4.2.1",
+    "keystone-storage-adapter-s3": "^2.0.0",
     "mailchimp-api-v3": "^1.15.0",
     "node-sass": "^4.13.1",
     "node-sass-middleware": "^0.11.0",
