--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,9 @@ trim_trailing_whitespace = false
 insert_final_newline = true
 indent_style = space
 
+[*.js]
+indent_size = 2
+
 [{*.yml,*.json, *.jade}]
 indent_style = space
 indent_size = 4
