--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,8 @@
     "@keystonejs/app-admin-ui": "^7.5.2",
     "@keystonejs/app-graphql": "^6.3.2",
     "@keystonejs/fields": "^22.1.3",
+    "@keystonejs/fields-color": "^1.1.2",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.4.2",
     "@keystonejs/file-adapters": "^7.1.2",
     "@keystonejs/keystone": "^19.3.3",
     "cross-env": "^7.0.3",
