GraphQL setup for homepage basic setup almost there

--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@keystonejs/fields-wysiwyg-tinymce": "^5.4.2",
     "@keystonejs/file-adapters": "^7.1.2",
     "@keystonejs/keystone": "^19.3.3",
+    "@keystonejs/server-side-graphql-client": "^2.1.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5"
   }
