--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "start": "node keystone.js",
     "dev": "cd app && npm run dev",
     "cypress": "npx cypress open",
-    "restore": "grunt restore"
+    "restore": "grunt restore",
+    "build-schema": "get-graphql-schema http://localhost:3000/admin/api/  > app/schema.graphql"
   },
   "main": "keystone.js",
   "private": true
