Added new node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sflultimate",
   "version": "3.0.0",
   "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
     "@keystonejs/auth-password": "^6.1.2",
