--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "sflultimate",
-  "version": "3.0.0",
-  "engines": {
-    "node": "16.20.2"
-  },
-  "dependencies": {
-    "@keystonejs/auth-password": "^6.1.2",
-    "async": "^2.6.1",
-    "bower": "^1.8.8",
-    "braintree": "^2.21.0",
-    "browserify": "^16.2.3",
-    "dotenv": "^6.1.0",
-    "express-recaptcha": "^5.0.1",
-    "jade": "^1.11.0",
-    "keystone": "^4.2.1",
-    "keystone-storage-adapter-s3": "^2.0.0",
-    "mailchimp-api-v3": "^1.15.0",
-    "node-sass": "^4.14.1",
-    "node-sass-middleware": "^0.11.0",
-    "nodemailer": "^6.9.1",
-    "request": "^2.88.0",
-    "sass-mediaqueries": "^1.6.1",
-    "superagent": "^4.0.0",
-    "underscore": "^1.9.1",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "cypress": "^13.6.6",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-mocha": "^10.0.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "grunt": "^1.0.4",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-nodemon": "^0.4.2",
-    "grunt-sass": "^3.0.2",
-    "grunt-shell": "^2.1.0",
-    "jshint-stylish": "^2.2.1",
-    "load-grunt-configs": "^1.0.0",
-    "load-grunt-tasks": "^4.0.0",
-    "time-grunt": "^2.0.0"
-  },
-  "scripts": {
-    "start": "node keystone.js",
-    "dev": "cd app && npm run dev",
-    "cypress": "npx cypress open",
-    "restore": "grunt restore",
-    "build-schema": "get-graphql-schema http://localhost:3000/admin/api/  > app/schema.graphql"
-  },
-  "main": "keystone.js",
-  "private": true,
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "name": "sflultimate",
+    "version": "3.0.0",
+    "engines": {
+        "node": "16.20.2",
+        "npm": "8.19.4"
+    },
+    "dependencies": {
+        "@keystonejs/adapter-mongoose": "^11.2.2",
+        "@keystonejs/app-admin-ui": "^7.5.2",
+        "@keystonejs/app-graphql": "^6.3.2",
+        "@keystonejs/app-next": "^6.1.2",
+        "@keystonejs/auth-password": "^6.1.2",
+        "@keystonejs/fields": "^22.1.3",
+        "@keystonejs/fields-color": "^1.1.2",
+        "@keystonejs/fields-wysiwyg-tinymce": "^5.4.2",
+        "@keystonejs/file-adapters": "^7.1.2",
+        "@keystonejs/keystone": "^19.3.3",
+        "@keystonejs/server-side-graphql-client": "^2.1.2",
+        "braintree": "^2.21.0",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
+        "mailchimp-api-v3": "^1.15.0",
+        "nodemailer": "^6.9.1",
+        "request": "^2.88.0",
+        "sass-mediaqueries": "^1.6.1",
+        "superagent": "^4.0.0",
+        "underscore": "^1.9.1"
+    },
+    "devDependencies": {
+        "cypress": "^13.6.6",
+        "eslint": "^7.32.0",
+        "eslint-config-standard": "^14.1.1",
+        "eslint-plugin-cypress": "^2.12.1",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-mocha": "^10.0.3",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.3.1",
+        "eslint-plugin-standard": "^4.0.1",
+        "grunt": "^1.0.4",
+        "grunt-concurrent": "^2.3.1",
+        "grunt-contrib-jshint": "^2.1.0",
+        "grunt-contrib-watch": "^1.1.0",
+        "grunt-nodemon": "^0.4.2",
+        "grunt-sass": "^3.0.2",
+        "grunt-shell": "^2.1.0",
+        "jshint-stylish": "^2.2.1",
+        "load-grunt-configs": "^1.0.0",
+        "load-grunt-tasks": "^4.0.0",
+        "time-grunt": "^2.0.0"
+    },
+    "scripts": {
+        "dev": "cd app && cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
+        "build": "cd app && cross-env NODE_ENV=production keystone build",
+        "start": "cd app && cross-env NODE_ENV=production keystone start",
+        "create-tables": "cross-env keystone create-tables",
+        "cypress": "npx cypress open",
+        "restore": "grunt restore",
+        "build-schema": "get-graphql-schema http://localhost:3000/admin/api/  > app/schema.graphql"
+    },
+    "main": "keystone.js",
+    "private": true,
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
