--- a/package.json
+++ b/package.json
@@ -58,7 +58,5 @@
         "restore": "grunt restore",
         "build-schema": "get-graphql-schema http://localhost:3000/admin/api/  > app/schema.graphql"
     },
-    "main": "keystone.js",
-    "private": true,
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "private": true
 }
