--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     },
     "devDependencies": {
         "cypress": "^13.6.6",
+        "cypress-iframe": "^1.0.1",
         "eslint": "^7.32.0",
         "eslint-config-standard": "^14.1.1",
         "eslint-plugin-cypress": "^2.12.1",
