--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "braintree": "^2.21.0",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
+        "file-saver": "^2.0.5",
         "mailchimp-api-v3": "^1.15.0",
         "nodemailer": "^6.9.1",
         "react-datetime-picker": "^6.0.1",
