--- a/package.json
+++ b/package.json
@@ -32,14 +32,10 @@
     "devDependencies": {
         "cypress": "^13.6.6",
         "cypress-iframe": "^1.0.1",
-        "eslint": "^7.32.0",
-        "eslint-config-standard": "^14.1.1",
-        "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-mocha": "^10.0.3",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.3.1",
-        "eslint-plugin-standard": "^4.0.1",
+        "eslint": "^8.57.1",
+        "eslint-config-cypress": "^0.28.0",
+        "eslint-config-next": "^15.5.0",
+        "eslint-config-standard": "^17.1.0",
         "grunt": "^1.0.4",
         "grunt-concurrent": "^2.3.1",
         "grunt-contrib-jshint": "^2.1.0",
