--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "dotenv": "^16.4.5",
         "file-saver": "^2.0.5",
         "mailchimp-api-v3": "^1.15.0",
+        "node-html-parser": "^7.0.1",
         "nodemailer": "^6.9.1",
         "react-datetime-picker": "^6.0.1",
         "request": "^2.88.0",
