--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "mailchimp-api-v3": "^1.15.0",
         "node-html-parser": "^7.0.1",
         "nodemailer": "^6.9.1",
+        "react-countdown": "^2.3.6",
         "react-datetime-picker": "^6.0.1",
         "request": "^2.88.0",
         "sass-mediaqueries": "^1.6.1",
