Setting up beach bash redirect css

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,10 @@ dist
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/copilot.data.migration.agent.xml
+.idea/copilot.data.migration.ask.xml
+.idea/copilot.data.migration.ask2agent.xml
+.idea/copilot.data.migration.edit.xml
 
 # Ignore next
 .next
