--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@keystonejs/file-adapters": "^7.1.2",
         "@keystonejs/keystone": "^19.3.3",
         "@keystonejs/server-side-graphql-client": "^2.1.2",
+        "add-to-calendar-button": "^2.13.3",
         "braintree": "^2.21.0",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
